{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 38,
  "lineage": "7c481067-4563-8bb9-0d3f-0948dffb3cbd",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df5c32c4d4710802",
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:instance/i-00ad5f8056bafb54f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ad5f8056bafb54f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a84e579707a88e7",
            "private_dns": "ip-10-0-1-243.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-54-252-212-107.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.212.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033105f3864cdd8d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-096365d38e08173e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053f4b13f4d145ce5",
            "tags": {
              "Name": "Bastion Instance - testnew"
            },
            "tags_all": {
              "Name": "Bastion Instance - testnew"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096365d38e08173e9"
            ]
          },
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-testnew/7a3f35c78d3f4b05",
            "arn_suffix": "app/wordpress-lb-testnew/7a3f35c78d3f4b05",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-lb-testnew-310685834.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-testnew/7a3f35c78d3f4b05",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-lb-testnew",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fea3842e48e1897d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032b9e24f96ee2ffb"
              },
              {
                "subnet_id": "subnet-053f4b13f4d145ce5"
              }
            ],
            "subnets": [
              "subnet-032b9e24f96ee2ffb",
              "subnet-053f4b13f4d145ce5"
            ],
            "tags": {
              "Name": "Application Load Balancer - testnew"
            },
            "tags_all": {
              "Name": "Application Load Balancer - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:listener/app/wordpress-lb-testnew/7a3f35c78d3f4b05/4b5d4980dfc4d8cd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-testnew/dd7401d29baec02b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:listener/app/wordpress-lb-testnew/7a3f35c78d3f4b05/4b5d4980dfc4d8cd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-testnew/7a3f35c78d3f4b05",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Listener for LB - testnew"
            },
            "tags_all": {
              "Name": "Listener for LB - testnew"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.instances.aws_efs_file_system.wordpress_efs",
            "module.instances.aws_efs_mount_target.wordpress_mount_target",
            "module.instances.aws_launch_configuration.wordpress_lc",
            "module.instances.aws_lb.wordpress_lb",
            "module.instances.aws_lb_target_group.wordpress_tg",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.efs_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-testnew/dd7401d29baec02b",
            "arn_suffix": "targetgroup/wordpress-tg-testnew/dd7401d29baec02b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 25,
                "matcher": "200,301",
                "path": "/wordpress",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-testnew/dd7401d29baec02b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg-testnew",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Target Group - testnew"
            },
            "tags_all": {
              "Name": "Target Group - testnew"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.instances.aws_efs_file_system.wordpress_efs",
            "module.instances.aws_efs_mount_target.wordpress_mount_target",
            "module.instances.aws_launch_configuration.wordpress_lc",
            "module.instances.aws_lb.wordpress_lb",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.efs_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0b778fe697b8c27",
            "domain": "vpc",
            "id": "eipalloc-0c0b778fe697b8c27",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-206-42-82.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.42.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:internet-gateway/igw-03f02111f9c0594be",
            "id": "igw-03f02111f9c0594be",
            "owner_id": "851725468631",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0b778fe697b8c27",
            "association_id": "eipassoc-0da3eeedad3332ce6",
            "connectivity_type": "public",
            "id": "nat-020a6f83525b5963e",
            "network_interface_id": "eni-062f60430213b91ed",
            "private_ip": "10.0.1.222",
            "public_ip": "54.206.42.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053f4b13f4d145ce5",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:route-table/rtb-0890e78710b09d10d",
            "id": "rtb-0890e78710b09d10d",
            "owner_id": "851725468631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020a6f83525b5963e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:route-table/rtb-0afab117c26a63c55",
            "id": "rtb-0afab117c26a63c55",
            "owner_id": "851725468631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f02111f9c0594be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08db27a44c523b48f",
            "route_table_id": "rtb-0890e78710b09d10d",
            "subnet_id": "subnet-0744cbc0e0a099eb1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0993f3ba72e8ba85b",
            "route_table_id": "rtb-0890e78710b09d10d",
            "subnet_id": "subnet-00293d745b25416ec"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0621cdcbf7816190c",
            "route_table_id": "rtb-0890e78710b09d10d",
            "subnet_id": "subnet-0ed054c4ecdc2ae29"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0586c4e54e7118c8b",
            "route_table_id": "rtb-0afab117c26a63c55",
            "subnet_id": "subnet-053f4b13f4d145ce5"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068f4c37fef3c3aca",
            "route_table_id": "rtb-0afab117c26a63c55",
            "subnet_id": "subnet-032b9e24f96ee2ffb"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-0744cbc0e0a099eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0744cbc0e0a099eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 - testnew"
            },
            "tags_all": {
              "Name": "Private Subnet 1 - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-00293d745b25416ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00293d745b25416ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 - testnew"
            },
            "tags_all": {
              "Name": "Private Subnet 2 - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-0ed054c4ecdc2ae29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed054c4ecdc2ae29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3 - testnew"
            },
            "tags_all": {
              "Name": "Private Subnet 3 - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-053f4b13f4d145ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f4b13f4d145ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1 - testnew"
            },
            "tags_all": {
              "Name": "Public Subnet 1 - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-032b9e24f96ee2ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032b9e24f96ee2ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2 - testnew"
            },
            "tags_all": {
              "Name": "Public Subnet 2 - testnew"
            },
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:vpc/vpc-020ae876256aed30a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a94d9f88365203c",
            "default_route_table_id": "rtb-01b2738e2ee2436ad",
            "default_security_group_id": "sg-03436f6c3394731e6",
            "dhcp_options_id": "dopt-005e63162c413eb8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020ae876256aed30a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b2738e2ee2436ad",
            "owner_id": "851725468631",
            "tags": {
              "Name": "testnew-VPC"
            },
            "tags_all": {
              "Name": "testnew-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-096365d38e08173e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096365d38e08173e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416010258660100000002",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group - testnew"
            },
            "tags_all": {
              "Name": "RDS Security Group - testnew"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0dad9a075161f1c72",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dad9a075161f1c72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096365d38e08173e9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fea3842e48e1897d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fea3842e48e1897d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416010301092400000005",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 Security Group - testnew"
            },
            "tags_all": {
              "Name": "EC2 Security Group - testnew"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0ec1248523077e3de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec1248523077e3de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dad9a075161f1c72"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20240416010303498500000006",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS Security Group - testnew"
            },
            "tags_all": {
              "Name": "EFS Security Group - testnew"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0fea3842e48e1897d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fea3842e48e1897d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416010258660100000001",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB Security Group - testnew"
            },
            "tags_all": {
              "Name": "LB Security Group - testnew"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0067b76ba2eab1f16",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0067b76ba2eab1f16",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096365d38e08173e9",
                  "sg-0dad9a075161f1c72"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096365d38e08173e9",
                  "sg-0dad9a075161f1c72"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240416010303510100000007",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group - testnew"
            },
            "tags_all": {
              "Name": "RDS Security Group - testnew"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ae876256aed30a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}